Update print statement from 'Hello' to 'Goodbye'

--- a/Cho_Oyu.html
+++ b/Cho_Oyu.html
@@ -302,7 +302,7 @@
                     <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80" alt="Чо-Ойю көрінісі">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80" alt="Чо-Ойю ландшафты">
+                    <img src="https://4sport.ua/_upl/2/1461/east-ridge-kangchenjunga.jpg" alt="Чо-Ойю ландшафты">
                 </div>
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80" alt="Чо-Ойю мұздықтары">
@@ -418,4 +418,5 @@
         }, 1000);
     </script>
 </body>
+
 </html>
